alambert    2005/10/30 04:18:05 UTC	(20051030-3255)
  Log:
  CS FLAGS: remove check -- doesn't work for deleting access

  Changes:	Modified:
  +0 -12	trunk/modules/chanserv/flags.c (File Modified) 


alambert    2005/10/30 04:14:02 UTC	(20051030-3253)
  Log:
  CS FLAGS: don't allow users to try a _completely_ bogus flag string. Thanks Matt <matt@stormirc.net>.

  Changes:	Modified:
  +12 -0	trunk/modules/chanserv/flags.c (File Modified) 


alambert    2005/10/30 04:12:45 UTC	(20051030-3251)
  Log:
  Revert 3249 -- svn picked up some other changes I didn't want to commit

  Changes:	Modified:
  +0 -2		trunk/modules/chanserv/akick.c (File Modified) 
  +1 -1		trunk/modules/chanserv/close.c (File Modified) 
  +5 -10	trunk/modules/chanserv/count.c (File Modified) 
  +0 -12	trunk/modules/chanserv/flags.c (File Modified) 
  +0 -1		trunk/modules/chanserv/xop.c (File Modified) 


alambert    2005/10/30 04:10:57 UTC	(20051030-3249)
  Log:
  CS FLAGS: don't allow users to try a _completely_ bogus flag string. Thanks Matt <matt@stormirc.net>.

  Changes:	Modified:
  +2 -0		trunk/modules/chanserv/akick.c (File Modified) 
  +1 -1		trunk/modules/chanserv/close.c (File Modified) 
  +10 -5	trunk/modules/chanserv/count.c (File Modified) 
  +12 -0	trunk/modules/chanserv/flags.c (File Modified) 
  +1 -0		trunk/modules/chanserv/xop.c (File Modified) 


alambert    2005/10/29 21:48:29 UTC	(20051029-3247)
  Log:
  remove extra comma

  Changes:	Modified:
  +1 -1		trunk/backend/postgresql.c (File Modified) 


alambert    2005/10/29 21:44:39 UTC	(20051029-3245)
  Log:
  remove url/entrymsg queries -- thanks pfish

  Changes:	Modified:
  +0 -6		trunk/backend/mysql.c (File Modified) 
  +2 -9		trunk/backend/postgresql.c (File Modified) 


alambert    2005/10/29 20:57:23 UTC	(20051029-3243)
  Log:
  make MySQL use transactions

  Changes:	Modified:
  +2 -2		trunk/backend/mysql.c (File Modified) 


alambert    2005/10/29 20:48:51 UTC	(20051029-3241)
  Log: